--- a/package.json
+++ b/package.json
@@ -44,16 +44,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@babel/runtime": "^7.7.4",
+    "@babel/runtime": "^7.10.5",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "core-js": "^3.4.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
-    "express-static-gzip": "^2.0.5",
+    "express-static-gzip": "^2.0.7",
     "focus-visible": "^5.0.2",
     "history": "^4.10.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "normalize.css": "^8.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -68,48 +68,47 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@hot-loader/react-dom": "^16.10.2",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.3.0",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
     "@types/babel-core": "^6.25.4",
     "@types/classnames": "^2.2.4",
     "@types/compression": "^1.0.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^26.0.0",
-    "@types/lodash": "^4.14.149",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.7",
+    "@types/lodash": "^4.14.158",
     "@types/node": "^12.12.14",
-    "@types/react": "^16.9.14",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.3",
     "@types/react-helmet": "^6.0.0",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router": "^5.1.2",
+    "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.3",
-    "@types/serialize-javascript": "^1.3.2",
+    "@types/serialize-javascript": "^4.0.0",
     "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.1.0",
     "del-cli": "^3.0.0",
-    "eslint": "7.2.0",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.6.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.19.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.20.4",
     "eslint-plugin-testing-library": "^3.3.1",
     "husky": "^4.0.0",
-    "jest": "^26.0.1",
+    "jest": "^26.1.0",
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "typescript": "^3.7.2",
+    "typescript": "^3.9.7",
     "varan": "^0.17.1"
   },
   "jest": {
