--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: CI
 on: [push]
 jobs:
   test:
@@ -6,7 +6,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [10, 12, 13]
+        node_version: [10, 12, 14]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
