--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.5",
-    "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "core-js": "^3.4.7",
     "dotenv": "^8.2.0",
@@ -54,7 +53,6 @@
     "focus-visible": "^5.0.2",
     "history": "^4.10.1",
     "lodash": "^4.17.19",
-    "normalize.css": "^8.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
@@ -65,7 +63,8 @@
     "react-waypoint": "^9.0.1",
     "serialize-javascript": "^4.0.0",
     "source-map-support": "^0.5.10",
-    "typesafe-actions": "^5.1.0"
+    "styled-components": "^5.1.1",
+    "styled-reset": "^4.2.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
@@ -87,11 +86,13 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.3",
     "@types/serialize-javascript": "^4.0.0",
+    "@types/styled-components": "^5.1.2",
     "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "del-cli": "^3.0.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -103,6 +104,7 @@
     "eslint-plugin-testing-library": "^3.3.1",
     "husky": "^4.0.0",
     "jest": "^26.1.0",
+    "jest-styled-components": "^7.0.2",
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
